# widget_bank_app

./: .env.template  .flake8  README.md  main.py  pyproject.toml
data/: operations.json
htmlcov/: index.html
src/: csv_excel_reader.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_csv_excel_reader.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
