[project]
name = "widget-bank-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "widget_bank_app", from = "src"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
types-requests = "^2.32.4.20250913"

[tool.black]
line-length = 119
exclude = '/(\.git)/'

[tool.isort]
multi_line_output = 1
include_trailing_comma = true
combine_as_imports = false
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '\.venv'
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
